--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,17 @@
 node_modules
+.next
+.vercel
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+.DS_Store
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.pnpm-debug.log*
+out/
+build/
+.swc/
+.turbo
