--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@radix-ui/react-tabs": "^1.1.4",
     "@radix-ui/react-tooltip": "^1.2.6",
     "@types/uuid": "^10.0.0",
+    "ag-grid-community": "^33.3.0",
+    "ag-grid-react": "^33.3.0",
     "chart.js": "^4.4.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
