--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@faker-js/faker": "^9.7.0",
+    "@handsontable/react": "^15.3.0",
     "@radix-ui/react-avatar": "^1.1.9",
     "@radix-ui/react-checkbox": "^1.3.1",
     "@radix-ui/react-dialog": "^1.1.7",
@@ -31,6 +32,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
+    "handsontable": "^15.3.0",
     "jiti": "^2.4.2",
     "lightningcss": "^1.29.3",
     "lucide-react": "^0.488.0",
