--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-dom": "^19.0.0",
     "recharts": "^2.15.2",
     "sonner": "^2.0.3",
+    "styled-jsx": "^5.1.7",
     "tailwind-merge": "^3.2.0",
     "tw-animate-css": "^1.2.5",
     "uuid": "^11.1.0"
